--- a/CV/index.html
+++ b/CV/index.html
@@ -1,85 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Caleb's first site</title>
-<link rel="stylesheet" href="css/styles.css">
+  <title>Adesina Caleb</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="download.png" alt="Adesina caleb profile picture"></td>
-      <td>
-        <h1>Adesina Caleb</h1>
-        <p><em>A maths student who's interested in <strong><a href="https://careerkarma.com/blog/what-is-coding-used-for/">coding</a></<strong></strong></em>.</p>
-        <p>I am a 21 year's old boy studying mathematics in the university of lagos,yaba lagos.<br><a href="https://careerfoundry.com/en/blog/web-development/what-is-a-full-stack-web-developer/">Aiming to become a fullstack developer</a></p>
-      </td>
-    </tr>
-  </table>
-  <hr size="2" noshades>
-  <h3> Hobbies</h3>
-  <ul>
-    <li>Playing video games</li>
-    <li>Watching movies</li>
-    <li>Listening to music</li>
-    <li>Playing and watching football</li>
-    <li>Eating</li>
-  </ul>
-  <hr>
-  <h3>My Goals</h3>
-  <ol>
-    <li>To understand frontend development</li>
-    <li>To understand backend development</li>
-    <li>To be a fullstack,blockchain developer</li>
-  </ol>
-  <hr>
-  <h3>My Education</h3>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Places</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2012-2018</td>
-        <td>Ferscoat comprehensive academy</td>
-      </tr>
-      <tr>
-        <td>2019-2020</td>
-        <td>Jovec solution academy</td>
-      </tr>
-      <tr>
-        <td>2020-date</td>
-        <td>University of lagos</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Forex trading</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Digital marketing</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Content writing</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    <tr>
-      <td>Web development</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-  </table>
-  <hr size="2" no shades>
-  <h3>Contact</h3>
-  <a href="contactme.html">Contact Me</a>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Adesina.</h1>
+    <p> a web3 developer.</p>
+    <img class="bottom-cloud"src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/caleb-modified.png" alt="caleb-img" width="200" height="200">
+      <h2>Hello.</h2>
+      <p class="intro">I'm a web3 developer,who lives in the heart of Lagos,Nigeria.
+      I have a passion for web design/development and blockchain development.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>What i love doing.</h2>
+      <div class="skill-row">
+        <img class="webdesign-img" src="images/web-design.png" alt="web design-img">
+        <h3>Designing</h3>
+        <p>I design layout,usability,and visual apperanace of a Website</p>
+      </div>
+      <div class="skill-row">
+        <img class="coding-img" src="images/coding.png" alt="coding-img">
+        <h3>Developing</h3>
+        <p>I'm a developer, so I know how to create your<br> website to run across devices using the latest technologies available.</br></p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>I can help</h3>
+      <p class="contact-message">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
+      <a class="btn" href="mailto:Adesinacaleb01@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  </div>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copyright">© 2022 Adesina Caleb.</p>
+
+  </div>
 </body>
 
 </html>
